fixed footer on mobile

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,6 +11,9 @@
         span{
             p{
                 color: gray;
+                @include mobile{
+                    font-size: 10px;     
+                }
             }
         }
     }
@@ -23,10 +26,19 @@
             width: 20px;
             height: 20px;
             border-radius: 50%;
+            @include mobile{
+                width: 10px;  
+                height: 10px;   
+                margin-top: 2px;
+            }
         }
         p{
             margin-left: 10px;
             color: gray;
+
+            @include mobile{
+                font-size: 10px;     
+            }
         }
     }
 
@@ -38,6 +50,10 @@
         h1{
             font-weight: 700;
             font-size: 30px;
+
+            @include mobile{
+                font-size: 15px;    
+            }
             
         }
         
@@ -60,7 +76,7 @@
 
             a img{
                 @include mobile{
-                    width: 20px; 
+                    width: 10px; 
                     border-radius: 50% !important;
                     
                 }
@@ -79,12 +95,12 @@
 
             a img{
                 @include mobile{
-                    width: 20px;  
+                    width: 13px;  
                 }
             }
 
             @include mobile{
-                overflow-y: hidden;   
+                
                 margin-right: 20px; 
                 
             }
